--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^3.3.6",
     "framer-motion": "^12.12.1",
     "helmet": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.18.0",
@@ -59,8 +59,8 @@
     "@babel/plugin-transform-optional-chaining": "^7.25.8",
     "@babel/plugin-transform-private-methods": "^7.25.7",
     "@rollup/plugin-terser": "^0.4.4",
-    "eslint": "^8.54.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
