--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.2.0",
     "@mantine/core": "^7.2.2",
+    "@react-spring/web": "^10.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
@@ -18,14 +19,21 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^12.12.1",
     "helmet": "^7.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "^4.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-use-gesture": "^9.1.3",
+    "web-vitals": "^2.1.4",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
