--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "xdl",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://XOBODELIVERY.github.io/XOBODELIVERY.CO.KE",
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
     "@fontsource/lexend": "^5.2.7",
@@ -36,6 +37,8 @@
     "workbox-webpack-plugin": "^7.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -68,6 +71,7 @@
     "@babel/plugin-transform-private-methods": "^7.25.7",
     "@rollup/plugin-terser": "^0.4.4",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
   }
