--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@babel/plugin-transform-numeric-separator": "^7.25.8",
     "@babel/plugin-transform-optional-chaining": "^7.25.8",
     "@babel/plugin-transform-private-methods": "^7.25.7",
+    "@craco/craco": "^7.1.0",
     "@rollup/plugin-terser": "^0.4.4",
     "autoprefixer": "^10.4.14",
     "gh-pages": "^6.3.0",
